# privacy-pools-sdk-rs

./: .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
.github/: CODEOWNERS  binding-parity-allowlist.toml  pull_request_template.md
.github/workflows/: assurance-fuzz.yml  assurance-nightly.yml  ci.yml  mobile-smoke.yml  reference-benchmarks.yml  release.yml  toolchain-canary.yml
bindings/android/: README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
crates/privacy-pools-sdk/: Cargo.toml
crates/privacy-pools-sdk-artifacts/: Cargo.toml
crates/privacy-pools-sdk-artifacts/proptest-regressions/: lib.txt
crates/privacy-pools-sdk-artifacts/src/: lib.rs
crates/privacy-pools-sdk-bindings-core/: Cargo.toml
crates/privacy-pools-sdk-bindings-core/src/: error.rs  lib.rs  parsers.rs  registry.rs
crates/privacy-pools-sdk-chain/: Cargo.toml
crates/privacy-pools-sdk-chain/proptest-regressions/: execution_policy_property.txt
crates/privacy-pools-sdk-chain/src/: lib.rs
crates/privacy-pools-sdk-chain/tests/: execution_policy_property.rs  execution_policy_reference.rs
crates/privacy-pools-sdk-circuits/: Cargo.toml
crates/privacy-pools-sdk-circuits/src/: lib.rs
crates/privacy-pools-sdk-cli/: Cargo.toml
crates/privacy-pools-sdk-cli/src/: main.rs
crates/privacy-pools-sdk-core/: Cargo.toml
crates/privacy-pools-sdk-core/proptest-regressions/: execution_policy_wire_property.txt
crates/privacy-pools-sdk-core/src/: lib.rs  limits.rs  parsers.rs  wire.rs
crates/privacy-pools-sdk-core/tests/: execution_policy_wire_property.rs  secret_hardening.rs  wire_property.rs
crates/privacy-pools-sdk-core/tests/ui/: secret_hash_map_key.rs  secret_hash_map_key.stderr  secret_nullifier_hash_map_key.rs  secret_nullifier_hash_map_key.stderr  secret_nullifier_serde.rs  secret_nullifier_serde.stderr  secret_order.rs  secret_order.stderr  secret_payloads_hash_order.rs  secret_payloads_hash_order.stderr  secret_payloads_serde.rs  secret_payloads_serde.stderr  secret_serde.rs  secret_serde.stderr
crates/privacy-pools-sdk-crypto/: Cargo.toml
crates/privacy-pools-sdk-crypto/src/: lib.rs
crates/privacy-pools-sdk-ffi/: Cargo.toml  uniffi.toml
crates/privacy-pools-sdk-ffi/src/: lib.rs
crates/privacy-pools-sdk-node/: Cargo.toml
crates/privacy-pools-sdk-node/src/: lib.rs
crates/privacy-pools-sdk-node/tests/: public_api_smoke.rs
crates/privacy-pools-sdk-prover/: Cargo.toml  build.rs
crates/privacy-pools-sdk-prover/src/: lib.rs
crates/privacy-pools-sdk-prover/tests/: ts_input_json_parity.rs
crates/privacy-pools-sdk-recovery/: Cargo.toml
crates/privacy-pools-sdk-recovery/src/: lib.rs
crates/privacy-pools-sdk-signer/: Cargo.toml
crates/privacy-pools-sdk-signer/examples/: sign-finalized-request.rs
crates/privacy-pools-sdk-signer/src/: lib.rs
crates/privacy-pools-sdk-tree/: Cargo.toml
crates/privacy-pools-sdk-tree/proptest-regressions/: lib.txt
crates/privacy-pools-sdk-tree/src/: lib.rs
crates/privacy-pools-sdk-verifier/: Cargo.toml
crates/privacy-pools-sdk-verifier/proptest-regressions/: lib.txt
crates/privacy-pools-sdk-verifier/src/: lib.rs
crates/privacy-pools-sdk-web/: Cargo.toml
crates/privacy-pools-sdk-web/src/: error.rs  lib.rs
crates/privacy-pools-sdk/examples/: basic.rs  client_builder.rs  npm_migration.rs  recovery_fixture.rs  withdrawal_paths.rs
crates/privacy-pools-sdk/proptest-regressions/: session_property.txt
crates/privacy-pools-sdk/src/: lib.rs
crates/privacy-pools-sdk/tests/: anvil_reorg.rs  reference_vectors.rs  session_lifecycle_reference.rs  session_property.rs  solidity_verifier.rs  verified_proof_safety.rs
crates/privacy-pools-sdk/tests/ui/: verified_proof_forged_execution_wrappers.rs  verified_proof_forged_execution_wrappers.stderr  verified_proof_forged_preflight.rs  verified_proof_forged_preflight.stderr  verified_proof_prepared_conversion.rs  verified_proof_prepared_conversion.stderr  verified_proof_raw_bundle.rs  verified_proof_raw_bundle.stderr
docs/: assurance-review-guide.md  assurance.md  audit-pack.md  benchmarking.md  binding-parity.md  canary-rollout.md  ci-runbook.md  ci.md  compatibility-baseline.md  crate-architecture.md  crates-publish-order.md  dependency-audit.md  feature-matrix.md  flake-triage.md  multi-runtime-status.md  preflight.md  protocol-legibility.md  regeneration.md  release-process.md  rust-migration-from-npm.md  toolchain-upgrade-protocol.md  v1-js-compatibility-matrix.md
fuzz/: Cargo.toml
fuzz/corpus/artifact_bundle_resolution/: withdraw-manifest-alt.json
fuzz/corpus/execution_policy_inputs/: finalized-preflight.json
fuzz/corpus/groth16_verifier_fuzz/: max-proof.json  minimal-proof.json  wrong-chain-proof.json  zero-proof.json
fuzz/corpus/json_boundaries/: wire-withdrawal-request.json
fuzz/corpus/manifest_parsing/: signed-manifest-alt.json  signed-manifest.json
fuzz/corpus/proof_bundle_parsing/: proof-bundle-alt.json
fuzz/corpus/wire_conversion/: wire-commitment-alt.json  wire-commitment.json
fuzz/fuzz_targets/: artifact_bundle_resolution.rs  execution_policy_inputs.rs  field_parsing.rs  groth16_verifier_fuzz.rs  json_boundaries.rs  manifest_parsing.rs  merkle_proof_tamper_fuzz.rs  proof_bundle_parsing.rs  relay_data_abi_fuzz.rs  session_invalidation.rs  wire_conversion.rs
security/: advisories.toml  assurance-matrix.json  assurance-uplift-checklist.md  audit-ledger.md  external-audit-readiness.md  reference-devices.json  unsafe-allowlist.json
solidity-verifier/: foundry.toml
supply-chain/: config.toml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/assurance/: catalog.rs  findings.rs  merge.rs  mod.rs  run.rs
xtask/src/commands/: assurance_cli.rs  bindings.rs  checks.rs  mod.rs  native_build.rs  regenerate.rs  release.rs
xtask/src/evidence/: external.rs  mod.rs
xtask/src/opts/: mod.rs
xtask/src/policy/: mod.rs
xtask/src/shared/: device.rs  git.rs  mod.rs  process.rs  wasm.rs
xtask/tests/unit/: mod.rs
(+78 files in other folders)
