[workspace]
members = [
    "crates/privacy-pools-sdk",
    "crates/privacy-pools-sdk-ffi",
    "crates/privacy-pools-sdk-node",
    "crates/privacy-pools-sdk-web",
    "crates/privacy-pools-sdk-circuits",
    "crates/privacy-pools-sdk-verifier",
    "crates/privacy-pools-sdk-core",
    "crates/privacy-pools-sdk-crypto",
    "crates/privacy-pools-sdk-tree",
    "crates/privacy-pools-sdk-artifacts",
    "crates/privacy-pools-sdk-prover",
    "crates/privacy-pools-sdk-chain",
    "crates/privacy-pools-sdk-recovery",
    "crates/privacy-pools-sdk-signer",
    "crates/privacy-pools-sdk-cli",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93"
repository = "https://github.com/0xmatthewb/privacy-pools-sdk-rs"
homepage = "https://github.com/0xmatthewb/privacy-pools-sdk-rs"
authors = ["matthewb"]

[workspace.dependencies]
anyhow = "1.0.102"
alloy-consensus = { version = "2.0.0", features = ["k256"] }
alloy-eips = "2.0.0"
async-trait = "0.1.89"
alloy-network = "2.0.0"
alloy-provider = { version = "2.0.0", default-features = false }
alloy-primitives = "1.5.7"
alloy-rpc-types-eth = "2.0.0"
alloy-signer-local = { version = "2.0.0", features = ["mnemonic", "zeroize"] }
alloy-sol-types = "1.5.7"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-groth16 = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-ff = "0.5.0"
camino = "1.2.2"
circom-prover = { version = "0.1.4", default-features = false }
getrandom = "0.2.17"
hex = "0.4.3"
num-bigint = "0.4.6"
pso-poseidon = "0.2.0"
rand = "0.8.5"
rust-witness = "0.1.6"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "time"] }
trybuild = "1.0.112"
uniffi = { version = "0.31.1", features = ["cli"] }
url = "2.5.7"
uuid = "1.23.0"
zeroize = { version = "1.8.2", features = ["derive"] }
zk-kit-lean-imt = { version = "0.1.1", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
format_push_string = "allow"
default_trait_access = "allow"
ignored_unit_patterns = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
unreadable_literal = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unnecessary_wraps = "allow"
unnecessary_debug_formatting = "allow"
zero_sized_map_values = "allow"
