[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde_json.workspace = true
uniffi.workspace = true

[lints]
workspace = true
