[package]
name = "xtask"
version = "0.1.0"
description = "Workspace automation tasks for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
hex.workspace = true
privacy-pools-sdk-artifacts = { version = "0.1.0", path = "../crates/privacy-pools-sdk-artifacts" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uniffi.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
tempfile.workspace = true

[lints]
workspace = true
