[package]
name = "privacy-pools-sdk-chain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
async-trait.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth.workspace = true
alloy-sol-types.workspace = true
hex.workspace = true
privacy-pools-sdk-core = { path = "../privacy-pools-sdk-core" }
privacy-pools-sdk-signer = { path = "../privacy-pools-sdk-signer" }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
