[package]
name = "privacy-pools-sdk-chain"
version = "0.1.0"
description = "Ethereum transaction planning and preflight checks for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/privacy-pools-sdk-chain"
readme = "../../README.md"
keywords = ["privacy", "zero-knowledge", "ethereum", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
async-trait.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth.workspace = true
alloy-sol-types.workspace = true
hex.workspace = true
privacy-pools-sdk-core = { version = "0.1.0", path = "../privacy-pools-sdk-core" }
privacy-pools-sdk-signer = { version = "0.1.0", path = "../privacy-pools-sdk-signer" }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-native-tls"] }

[target.'cfg(not(any(target_os = "ios", target_os = "macos")))'.dependencies]
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls"] }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
