[package]
name = "privacy-pools-sdk-circuits"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
privacy-pools-sdk-core = { path = "../privacy-pools-sdk-core" }
privacy-pools-sdk-crypto = { path = "../privacy-pools-sdk-crypto" }
privacy-pools-sdk-tree = { path = "../privacy-pools-sdk-tree" }
thiserror.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }

[lints]
workspace = true
