[package]
name = "privacy-pools-sdk-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
privacy-pools-sdk = { version = "0.1.0", path = "../privacy-pools-sdk" }
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.38.4"

[lints]
workspace = true
