[package]
name = "privacy-pools-sdk-cli"
version = "0.1.0"
description = "Local development CLI for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
hex.workspace = true
privacy-pools-sdk = { version = "0.1.0", path = "../privacy-pools-sdk", features = ["local-mnemonic", "local-signer-client"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo = "0.38.4"
tokio.workspace = true

[lints]
workspace = true
