[package]
name = "privacy-pools-sdk-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
hex.workspace = true
serde.workspace = true
thiserror.workspace = true
