[package]
name = "privacy-pools-sdk-core"
version = "0.1.0"
description = "Core protocol types for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/privacy-pools-sdk-core"
readme = "../../README.md"
keywords = ["privacy", "zero-knowledge", "ethereum", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
hex.workspace = true
serde.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
trybuild.workspace = true

[lints]
workspace = true
