[package]
name = "privacy-pools-sdk-crypto"
version = "0.1.0"
description = "Cryptographic derivation helpers for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/privacy-pools-sdk-crypto"
readme = "../../README.md"
keywords = ["privacy", "zero-knowledge", "ethereum", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
privacy-pools-sdk-core = { version = "0.1.0", path = "../privacy-pools-sdk-core" }
pso-poseidon.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
