[package]
name = "privacy-pools-sdk-ffi"
version = "0.1.0"
description = "UniFFI mobile bindings for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
hex.workspace = true
privacy-pools-sdk = { version = "0.1.0", path = "../privacy-pools-sdk" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true

[lints]
workspace = true
