[package]
name = "privacy-pools-sdk-ffi"
version = "0.1.0"
description = "UniFFI mobile bindings for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
dangerous-exports = []
local-mnemonic = ["privacy-pools-sdk/local-mnemonic"]
dangerous-key-export = ["privacy-pools-sdk/dangerous-key-export"]
local-signer-client = ["privacy-pools-sdk/local-signer-client"]

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
hex.workspace = true
privacy-pools-sdk = { version = "0.1.0", path = "../privacy-pools-sdk" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeroize.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-signer-local.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true

[lints]
workspace = true
