[package]
name = "privacy-pools-sdk-prover"
version = "0.1.0"
description = "Local proof generation and verification engines for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/privacy-pools-sdk-prover"
readme = "../../README.md"
keywords = ["privacy", "zero-knowledge", "ethereum", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[features]
default = ["native-witness"]
native-witness = ["circom-prover/rustwitness", "dep:rust-witness"]
rapidsnark = ["circom-prover/rapidsnark"]

[dependencies]
ark-bls12-381.workspace = true
ark-bn254.workspace = true
ark-crypto-primitives.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-relations.workspace = true
ark-std.workspace = true
circom-prover = { workspace = true, default-features = false, features = ["arkworks"] }
num-bigint.workspace = true
privacy-pools-sdk-artifacts = { version = "0.1.0", path = "../privacy-pools-sdk-artifacts" }
privacy-pools-sdk-core = { version = "0.1.0", path = "../privacy-pools-sdk-core" }
privacy-pools-sdk-verifier = { version = "0.1.0", path = "../privacy-pools-sdk-verifier" }
rand.workspace = true
rust-witness = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
uuid = { workspace = true, features = ["js"] }

[build-dependencies]
camino.workspace = true
rust-witness = { workspace = true, optional = true }

[lints]
workspace = true
