[package]
name = "privacy-pools-sdk-recovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
privacy-pools-sdk-core = { path = "../privacy-pools-sdk-core" }
privacy-pools-sdk-crypto = { path = "../privacy-pools-sdk-crypto" }
serde.workspace = true
thiserror.workspace = true
