[package]
name = "privacy-pools-sdk-recovery"
version = "0.1.0"
description = "Account recovery helpers for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/privacy-pools-sdk-recovery"
readme = "../../README.md"
keywords = ["privacy", "zero-knowledge", "ethereum", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
privacy-pools-sdk-core = { version = "0.1.0", path = "../privacy-pools-sdk-core" }
privacy-pools-sdk-crypto = { version = "0.1.0", path = "../privacy-pools-sdk-crypto" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
