[package]
name = "privacy-pools-sdk-signer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-signer-local.workspace = true
privacy-pools-sdk-core = { path = "../privacy-pools-sdk-core" }
thiserror.workspace = true
