[package]
name = "privacy-pools-sdk-signer"
version = "0.1.0"
description = "Signer abstractions for the Privacy Pools Rust SDK"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/privacy-pools-sdk-signer"
readme = "../../README.md"
keywords = ["privacy", "zero-knowledge", "ethereum", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
local-mnemonic = ["dep:alloy-signer-local"]
local-signer-client = ["local-mnemonic"]
dangerous-key-export = ["local-mnemonic"]

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-signer-local = { workspace = true, optional = true }
privacy-pools-sdk-core = { version = "0.1.0", path = "../privacy-pools-sdk-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
